# Smartphone-Usage-productivity

./: LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
config/: config.yaml
notebooks/: 01_eda.ipynb  02_Linear_Regression.ipynb  03_model_comparison.ipynb
results/: model_comparison_results.csv
src/: 001_data_cleaning.py  001_load_data.py
src/data/: cleaning.py  feature_engineering.py  ingestation.py  preprocessors.py  run_pipeline.py  validation.py
src/models/: model_comparison.py
