[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "Productivity"
version = "0.0.1"
description = "This project uses a dataset of 50,000 clean and structured user records to develop machine learning models that analyze the relationship between smartphone usage behavior, sleep patterns, stress levels, and workplace productivity indicators."
authors = [
  { name = "Hendry Mwamburi" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["Productivity"]
include = ["pyproject.toml", "Productivity/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["Productivity"]
force-sort-within-sections = true

